...
                                OutlinedButton(
                                    { actions.action(BookDetailAction.Shelf) },
                                    enabled = state.canInteract,
                                    modifier =
                                        Modifier.weight(1f)
                                            .heightIn(min = 48.dp)
                                            .testTag("book-detail-shelf"),
                                ) {
                                    Text(
                                        stringResource(
                                            if (data.inBookshelf == true)
                                                R.string.remove_from_bookshelf
                                            else R.string.add_to_bookshelf
...
                                Button(
                                    { actions.action(BookDetailAction.Read) },
                                    enabled = state.canInteract,
                                    modifier =
                                        Modifier.weight(1f)
                                            .heightIn(min = 48.dp)
                                            .testTag("book-detail-read"),
                                ) {
                                    Text(stringResource(R.string.reading))
                                }
                            }
                        }
                },
...
