...
    <string name="download_path">Cache path</string>
    <string name="sys_file_picker">System file picker</string>
    <string name="new_version">New version</string>
    <string name="download_update">Download updates</string>
    <string name="volume_key_page_on_play">Volume keys to turn page when reading</string>
    <string name="tip_margin_change">Margin adjustment</string>
    <string name="allow_update">Enable update</string>
    <string name="disable_update">Disable update</string>
    <string name="split_long_chapter">Split extra-long chapters</string>
    <string name="need_more_time_load_content">When the body length is too long, it may take more time to load the text.</string>
    <string name="revert_selection">Inverse</string>
    <string name="search_book_key">Search book name/author</string>
    <string name="search_result_filter">Search result exclusions</string>
...
    <string name="r_find_url">Discover url(url)</string>
    <string name="r_book_list">Book list(bookList)</string>
    <string name="r_book_name">Book title(name)</string>
    <string name="r_book_url">Details page url(bookUrl)</string>
    <string name="r_author">Author(author)</string>
    <string name="rule_book_kind">Classification(kind)</string>
    <string name="rule_book_intro">Intro(intro)</string>
    <string name="rule_cover_url">CoverUrl(coverUrl)</string>
    <string name="rule_last_chapter">Last chapter(lastChapter)</string>
    <string name="rule_word_count">Word count(wordCount)</string>
    <string name="book_url_pattern">Book url pattern(bookUrlPattern)</string>
    <string name="rule_book_info_init">Book info init(bookInfoInit)</string>
    <string name="rule_toc_url">TOC url(tocUrl)</string>
...
